[gd_scene load_steps=5 format=1]

[ext_resource path="res://the_game.gd" type="Script" id=1]
[ext_resource path="res://UpperPart.tscn" type="PackedScene" id=2]
[ext_resource path="res://thinking_track.tscn" type="PackedScene" id=3]
[ext_resource path="res://img/background.png" type="Texture" id=4]

[node name="RSS" type="Node2D"]

script/script = ExtResource( 1 )

[node name="upper_part" parent="." instance=ExtResource( 2 )]

[node name="thinking_track" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 818.2, 286.999 )

[node name="sequence_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Sprite" type="Sprite" parent="."]

z/z = -1
texture = ExtResource( 4 )
centered = false
region = true
region_rect = Rect2( 0, 0, 1024, 576 )

[node name="WavesJumpedLabel" type="RichTextLabel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 600.0
margin/top = 50.0
margin/right = 640.0
margin/bottom = 90.0
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[connection signal="completed_key_sequence" from="thinking_track" to="." method="_on_thinking_track_completed_key_sequence"]

[connection signal="pressed_correct_key" from="thinking_track" to="." method="_on_thinking_track_pressed_correct_key"]

[connection signal="pressed_wrong_key" from="thinking_track" to="." method="_on_thinking_track_pressed_wrong_key"]

[connection signal="timeout" from="sequence_timer" to="." method="_on_sequence_timer_timeout"]


